--- a/ChadeAPI/ChadeAPI.csproj
+++ b/ChadeAPI/ChadeAPI.csproj
@@ -4,4 +4,8 @@
     <TargetFrameworks>netstandard2.0;net45;net40</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WinAPI\WinAPI.csproj" />
+  </ItemGroup>
+
 </Project>
