Added support for bind and reverse connections using Named Pipes on systems.

--- a/ChadeCLI/ChadeCLI.csproj
+++ b/ChadeCLI/ChadeCLI.csproj
@@ -5,4 +5,8 @@
     <TargetFrameworks>netcoreapp3.0;net45;net40</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChadeAPI\ChadeAPI.csproj" />
+  </ItemGroup>
+
 </Project>
