--- a/Chade/Chade.csproj
+++ b/Chade/Chade.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.7.82" />
     <PackageReference Include="ilmerge" Version="3.0.29" />
   </ItemGroup>
 
